--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,21 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-family: Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --color-title: #16479D;
+}
+
+h1 {
+  color: var(--color-title);
+  margin-bottom: 1rem;
+  font-size: 2.1rem;
+}
+
+.bold {
+  font-weight: bold;
+  color: var(--color-title);
 }
