--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,11 +2,12 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Helvetica, sans-serif;
+  font-family: Roboto, Helvetica, sans-serif;
 }
 
 :root {
   --color-title: #16479D;
+  --color-botao-verde: #25b456;
 }
 
 h1 {
