--- a/frontend/src/components/layout/Footer.module.scss
+++ b/frontend/src/components/layout/Footer.module.scss
@@ -1,9 +1,14 @@
 .footer {
-  height: 99px;
+  height: 50px;
   display: flex;
+  width: 100%;
   align-items: center;
   justify-content: center;
-  background-color: #EEE;
+  // background-color: var(--color-cinza-fundo);
+  background: linear-gradient(to bottom right, var(--color-cinza-fundo), #e0e0e0);
+
   color: #444;
   border-top: 1px solid #ddd;
+  position: fixed;
+  bottom: 0;
 }
