--- a/frontend/src/pages/Pet/AddPet.module.scss
+++ b/frontend/src/pages/Pet/AddPet.module.scss
@@ -1,6 +1,6 @@
-.addpet_header {
+.pet_header {
   text-align: center;
-  margin-bottom: 1.2rem;
+  margin-bottom: 4rem;
 
   h1 {
     margin-bottom: 0.2rem;
