--- a/frontend/src/components/form/Form.module.scss
+++ b/frontend/src/components/form/Form.module.scss
@@ -18,7 +18,7 @@
     transition: all .5s;
 
     &:hover {
-      background-color: #1c8a42;
+      background-color: var(--color-verde-2);
     }
   }
 
