--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,7 @@
 :root {
   --color-title: #16479D;
   --color-botao-verde: #25b456;
+  --color-verde-2: #1c8a42;
   --color-cinza-fundo: #f0f0f0;
   --color-laranja: #FFd400;
   --color-laranja-2: #ffe66c;
