--- a/frontend/src/pages/Home.module.scss
+++ b/frontend/src/pages/Home.module.scss
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  min-width: 180px;
+  min-width: 190px;
 
   h3 {
     color: var(--color-title);
@@ -63,5 +63,11 @@
     background-color: #e0e0e0;
     font-weight: bold;
     padding: 8px 15px;
+  }
+}
+
+@media (max-width: 492px) {
+  .pet_card {
+    width: 70%;
   }
 }
